--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+    "Ubuntu", "Cantarell", "Fira Sans", "Fira Sans Condensed", "Droid Sans",
+    "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #1e1e20;
@@ -55,4 +55,34 @@ code {
 
 .dots_custom li.slick-active button {
   background-color: #8d7efd;
+}
+
+@font-face {
+  font-family: "Fira Sans Condensed";
+  font-style: normal;
+  font-weight: 400;
+  src: url("/src/assets/fonts/FiraSansCondensed-Italic.woff") format("woff");
+  font-display: swap;
+}
+@font-face {
+  font-family: "Fira Sans Condensed";
+  font-style: normal;
+  font-weight: 500;
+  src: url("/src/assets/fonts/FiraSansCondensed-MediumItalic.woff")
+    format("woff");
+  font-display: swap;
+}
+@font-face {
+  font-family: "Fira Sans Condensed";
+  font-style: normal;
+  font-weight: 600;
+  src: url("FiraSansCondensed-SemiBoldItalic.woff") format("woff");
+  font-display: swap;
+}
+@font-face {
+  font-family: "Fira Sans Condensed";
+  font-style: normal;
+  font-weight: 700;
+  src: url("/src/assets/fonts/FiraSansCondensed-BoldItalic.woff") format("woff");
+  font-display: swap;
 }
